--- a/templates/display.html
+++ b/templates/display.html
@@ -26,7 +26,7 @@
             script.async = true;
             script.type = 'text/javascript';
             script.innerHTML = JSON.stringify({
-                "width": "980",
+                "width": "auto",
                 "height": "610",
                 "symbol": "NASDAQ:" + ticker,
                 "interval": "D",
